[CREATE] login-form component & [UPDATE] css files

--- a/public/index.html
+++ b/public/index.html
@@ -13,14 +13,14 @@
         <div class="img-icon">
             <img src="../src/assets/imgs/logo.svg" alt="">
         </div>
-        <form action="">
+        <!--form action="">
             <h2>Identifícate</h2>
             <p>Usuario:</p>
             <input type="text">
             <p>Contraseña</p>
             <input type="password" name="" id="">
             <button type="submit">Ingresar</button>
-        </form>
+        </form-->
     </main>
     <footer>2021 PlatziMarket</footer>    
 </body>
