[UPDATE] login view

--- a/public/index.html
+++ b/public/index.html
@@ -9,19 +9,19 @@
     <title>PlatziMarket</title>
 </head>
 <body>
-    <main>
+    <!--main>
         <div class="img-icon">
             <img src="../src/assets/imgs/logo.svg" alt="">
         </div>
-        <!--form action="">
+        <form action="">
             <h2>Identifícate</h2>
             <p>Usuario:</p>
             <input type="text">
             <p>Contraseña</p>
             <input type="password" name="" id="">
             <button type="submit">Ingresar</button>
-        </form-->
-    </main>
+        </form>
+    </main-->
     <footer>2021 PlatziMarket</footer>    
 </body>
 </html>
